--- a/app/src/main/res/layout/view_profile.xml
+++ b/app/src/main/res/layout/view_profile.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -19,8 +19,8 @@
             android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="16dp"
-            android:src="@drawable/ic_info_black_24dp"
-            tools:src="@drawable/tw__ic_logo_default"/>
+            android:src="@drawable/ic_instagram_logo_white"
+            tools:src="@drawable/ic_sync_black_24dp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -32,124 +32,37 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:id="@+id/profile_view_posts_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="4dp"
-                        android:fontFamily="@string/font_light"
-                        android:textColor="#333"
-                        android:textSize="26dp"
-                        tools:text="60"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:text="posts"
-                        android:textColor="#333"
-                        android:textSize="16dp"/>
-                </LinearLayout>
-                <!--<TextView-->
-                <!--android:id="@+id/profile_view_username"-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="bottom"-->
-                <!--android:layout_weight="1"-->
-                <!--android:ellipsize="end"-->
-                <!--android:fontFamily="@string/font_light"-->
-                <!--android:maxLines="1"-->
-                <!--android:textColor="#000"-->
-                <!--android:textSize="30dp"-->
-                <!--tools:text="xariton"/>-->
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/profile_view_posts_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:orientation="vertical">
+                    android:layout_marginRight="4dp"
+                    android:fontFamily="@string/font_light"
+                    android:textColor="#333"
+                    android:textSize="26dp"
+                    tools:text="60"/>
 
-                    <TextView
-                        android:id="@+id/profile_view_followers_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:textColor="#333"
-                        android:textSize="20dp"
-                        tools:text="50"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:text="followers"
-                        android:textColor="#333"
-                        android:textSize="12dp"/>
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@string/font_light"
+                    android:text="posts"
+                    android:textColor="#333"
+                    android:textSize="16dp"/>
             </LinearLayout>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/profile_view_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:orientation="horizontal">
+                android:ellipsize="end"
+                android:fontFamily="@string/font_light"
+                android:maxLines="1"
+                android:textColor="#000"
+                android:textSize="30dp"
+                tools:text="xariton"/>
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <!--<TextView-->
-                    <!--android:id="@+id/profile_view_posts_count"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginRight="4dp"-->
-                    <!--android:fontFamily="@string/font_light"-->
-                    <!--android:textColor="#333"-->
-                    <!--android:textSize="26dp"-->
-                    <!--tools:text="60"/>-->
-
-                    <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:fontFamily="@string/font_light"-->
-                    <!--android:text="posts"-->
-                    <!--android:textColor="#333"-->
-                    <!--android:textSize="16dp"/>-->
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:orientation="vertical">
-
-
-                    <TextView
-                        android:id="@+id/profile_view_following_count"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:textColor="#333"
-                        android:textSize="20dp"
-                        tools:text="26"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@string/font_light"
-                        android:text="following"
-                        android:textColor="#333"
-                        android:textSize="12dp"/>
-                </LinearLayout>
-            </LinearLayout>
         </FrameLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
